--- a/social_media_application/G4.Application/G4.Application.csproj
+++ b/social_media_application/G4.Application/G4.Application.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Responses\" />
+    <Folder Include="Models\Requests\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
