--- a/social_media_application/G4.Application/G4.Application.csproj
+++ b/social_media_application/G4.Application/G4.Application.csproj
@@ -9,7 +9,10 @@
   <ItemGroup>
     <Folder Include="Models\Responses\" />
     <Folder Include="Models\Requests\" />
-    <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\G4.Domain\G4.Domain.csproj" />
   </ItemGroup>
 
 </Project>
