--- a/social_media_application/G4.WebApplication/appsettings.json
+++ b/social_media_application/G4.WebApplication/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "JWT": {
+      "Issuer": "issuer",
+      "Audience": "audience",
+      "SecretKey": "ThisSecretKeyForApplication"
+    }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=;User Id=;Password=;TrustServerCertificate=True"
+  }
 }
