--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /social_media_application/G4.Domain/bin
 /social_media_application/G4.Repository/bin
 /social_media_application/G4.WebApplication/bin
+social_media_application/G4.WebApplication/appsettings.json
